# src/main/java/dev/sultanov/keycloak/multitenancy/resource/TenantMembershipsResource.java
@@ -23,6 +23,7 @@ import org.eclipse.microprofile.openapi.annotations.media.Schema;
 import org.eclipse.microprofile.openapi.annotations.parameters.Parameter;
 import org.eclipse.microprofile.openapi.annotations.parameters.RequestBody;
 import org.eclipse.microprofile.openapi.annotations.responses.APIResponse;
+import org.eclipse.microprofile.openapi.annotations.responses.APIResponses;
 import org.keycloak.events.admin.OperationType;
 import org.keycloak.models.Constants;
 import org.keycloak.utils.StringUtil;
@@ -39,7 +40,11 @@ public class TenantMembershipsResource extends AbstractAdminResource<TenantAdmin
     @GET
     @Produces(MediaType.APPLICATION_JSON)
     @Operation(operationId = "listMemberships", summary = "List tenant memberships")
-    @APIResponse(responseCode = "200", description = "OK", content = @Content(schema = @Schema(type = SchemaType.ARRAY, implementation = TenantMembershipRepresentation.class)))
+    @APIResponses({
+            @APIResponse(responseCode = "200", description = "OK", content = @Content(schema = @Schema(type = SchemaType.ARRAY, implementation = TenantMembershipRepresentation.class))),
+            @APIResponse(responseCode = "401", description = "Unauthorized"),
+            @APIResponse(responseCode = "403", description = "Forbidden")
+    })
     public Stream<TenantMembershipRepresentation> listMemberships(
             @Parameter(description = "Member email") @QueryParam("search") String search,
             @Parameter(description = "Pagination offset") @QueryParam("first") Integer firstResult,
@@ -63,6 +68,12 @@ public class TenantMembershipsResource extends AbstractAdminResource<TenantAdmin
     @Produces(MediaType.APPLICATION_JSON)
     @Consumes(value = MediaType.APPLICATION_JSON)
     @Operation(operationId = "updateMembership", summary = "Update tenant membership")
+    @APIResponses({
+            @APIResponse(responseCode = "204", description = "No Content"),
+            @APIResponse(responseCode = "401", description = "Unauthorized"),
+            @APIResponse(responseCode = "403", description = "Forbidden"),
+            @APIResponse(responseCode = "404", description = "Not Found")
+    })
     public Response update(@PathParam("membershipId") String membershipId, @RequestBody(required = true) TenantMembershipRepresentation request) {
         var optionalMembership = tenant.getMembershipById(membershipId);
         if (optionalMembership.isEmpty()) {
@@ -81,13 +92,19 @@ public class TenantMembershipsResource extends AbstractAdminResource<TenantAdmin
     @DELETE
     @Path("{membershipId}")
     @Operation(operationId = "revokeMembership", summary = "Revoke tenant membership")
+    @APIResponses({
+            @APIResponse(responseCode = "204", description = "No Content"),
+            @APIResponse(responseCode = "401", description = "Unauthorized"),
+            @APIResponse(responseCode = "403", description = "Forbidden"),
+            @APIResponse(responseCode = "404", description = "Not Found")
+    })
     public Response revokeMembership(@PathParam("membershipId") String membershipId) {
         var revoked = tenant.revokeMembership(membershipId);
         if (revoked) {
             adminEvent.operation(OperationType.DELETE)
                     .resourcePath(session.getContext().getUri())
                     .success();
-            return Response.status(204).build();
+            return Response.noContent().build();
         } else {
             throw new NotFoundException(String.format("No membership with id %s", membershipId));
         }
