# src/main/java/dev/sultanov/keycloak/multitenancy/resource/TenantsResource.java
@@ -3,8 +3,8 @@ package dev.sultanov.keycloak.multitenancy.resource;
 import dev.sultanov.keycloak.multitenancy.model.TenantModel;
 import dev.sultanov.keycloak.multitenancy.resource.representation.TenantRepresentation;
 import jakarta.ws.rs.Consumes;
+import jakarta.ws.rs.ForbiddenException;
 import jakarta.ws.rs.GET;
-import jakarta.ws.rs.NotAuthorizedException;
 import jakarta.ws.rs.NotFoundException;
 import jakarta.ws.rs.POST;
 import jakarta.ws.rs.Path;
@@ -22,9 +22,11 @@ import org.eclipse.microprofile.openapi.annotations.media.Schema;
 import org.eclipse.microprofile.openapi.annotations.parameters.Parameter;
 import org.eclipse.microprofile.openapi.annotations.parameters.RequestBody;
 import org.eclipse.microprofile.openapi.annotations.responses.APIResponse;
+import org.eclipse.microprofile.openapi.annotations.responses.APIResponses;
 import org.keycloak.events.admin.OperationType;
 import org.keycloak.models.Constants;
 import org.keycloak.models.KeycloakSession;
+
 
 public class TenantsResource extends AbstractAdminResource<TenantAdminAuth> {
 
@@ -36,12 +38,16 @@ public class TenantsResource extends AbstractAdminResource<TenantAdminAuth> {
     @Consumes(MediaType.APPLICATION_JSON)
     @Produces(MediaType.APPLICATION_JSON)
     @Operation(operationId = "createTenant", summary = "Create a tenant")
-    @APIResponse(responseCode = "201", description = "Created")
+    @APIResponses({
+            @APIResponse(responseCode = "201", description = "Created"),
+            @APIResponse(responseCode = "401", description = "Unauthorized"),
+            @APIResponse(responseCode = "403", description = "Forbidden")
+    })
     public Response createTenant(@RequestBody(required = true) TenantRepresentation request) {
 
         var requiredRole = realm.getAttribute("requiredRoleForTenantCreation");
         if (requiredRole != null && !auth.hasAppRole(auth.getClient(), requiredRole)) {
-            throw new NotAuthorizedException(String.format("Missing required role for tenant creation: %s", requiredRole));
+            throw new ForbiddenException(String.format("Missing required role for tenant creation: %s", requiredRole));
         }
 
         TenantModel model = tenantProvider.createTenant(realm, request.getName(), auth.getUser());
@@ -58,7 +64,10 @@ public class TenantsResource extends AbstractAdminResource<TenantAdminAuth> {
     @GET
     @Produces(MediaType.APPLICATION_JSON)
     @Operation(operationId = "listTenants", summary = "List tenants")
-    @APIResponse(responseCode = "200", description = "OK", content = @Content(schema = @Schema(type = SchemaType.ARRAY, implementation = TenantRepresentation.class)))
+    @APIResponses({
+            @APIResponse(responseCode = "200", description = "OK", content = @Content(schema = @Schema(type = SchemaType.ARRAY, implementation = TenantRepresentation.class))),
+            @APIResponse(responseCode = "401", description = "Unauthorized")
+    })
     public Stream<TenantRepresentation> listTenants(
             @Parameter(description = "Tenant name") @QueryParam("search") String searchQuery,
             @Parameter(description = "Pagination offset") @QueryParam("first") Integer firstResult,
@@ -79,7 +88,7 @@ public class TenantsResource extends AbstractAdminResource<TenantAdminAuth> {
         TenantModel model = tenantProvider.getTenantById(realm, tenantId)
                 .orElseThrow(() -> new NotFoundException(String.format("%s not found", tenantId)));
         if (!auth.isTenantAdmin(model)) {
-            throw new NotAuthorizedException(String.format("Insufficient permission to access %s", tenantId));
+            throw new ForbiddenException(String.format("Insufficient permission to access %s", tenantId));
         } else {
             return new TenantResource(this, model);
         }
